fix bug in create product and image, add swagger for it, and serve uploaded media
