# api/swagger.yaml
@@ -8,6 +8,15 @@ definitions:
     required:
     - title
     type: object
+  github_com_iarsham_shop-api_internal_dto.MediaRequest:
+    properties:
+      files:
+        items:
+          $ref: '#/definitions/multipart.FileHeader'
+        type: array
+    required:
+    - files
+    type: object
   github_com_iarsham_shop-api_internal_dto.ProductRequest:
     properties:
       category_slug:
@@ -134,6 +143,19 @@ definitions:
       usersID:
         type: integer
     type: object
+  github_com_iarsham_shop-api_internal_models.ProductImages:
+    properties:
+      UpdatedAt:
+        type: string
+      created_at:
+        type: string
+      id:
+        type: integer
+      productsSlug:
+        type: string
+      url:
+        type: string
+    type: object
   github_com_iarsham_shop-api_internal_models.Products:
     properties:
       UpdatedAt:
@@ -150,6 +172,10 @@ definitions:
       description:
         example: Phone Description
         type: string
+      images:
+        items:
+          $ref: '#/definitions/github_com_iarsham_shop-api_internal_models.ProductImages'
+        type: array
       isAvailable:
         example: true
         type: boolean
@@ -183,6 +209,15 @@ definitions:
       name:
         type: string
     type: object
+  multipart.FileHeader:
+    properties:
+      filename:
+        type: string
+      header:
+        $ref: '#/definitions/textproto.MIMEHeader'
+      size:
+        type: integer
+    type: object
   responses.CategoryDuplicateResponse:
     properties:
       response:
@@ -215,6 +250,12 @@ definitions:
         type: string
       title:
         example: Mobile
+        type: string
+    type: object
+  responses.CreateProductImagesResponse:
+    properties:
+      response:
+        example: Created Successfully
         type: string
     type: object
   responses.DeleteRecordResponse:
@@ -271,6 +312,10 @@ definitions:
       description:
         example: Phone Description
         type: string
+      images:
+        items:
+          $ref: '#/definitions/github_com_iarsham_shop-api_internal_models.ProductImages'
+        type: array
       isAvailable:
         example: true
         type: boolean
@@ -357,6 +402,12 @@ definitions:
     properties:
       response:
         $ref: '#/definitions/responses.Token'
+    type: object
+  textproto.MIMEHeader:
+    additionalProperties:
+      items:
+        type: string
+      type: array
     type: object
 host: localhost:8000
 info:
@@ -541,6 +592,41 @@ paths:
       summary: Verify OTP
       tags:
       - OTP
+  /product-images/{pk}/create/:
+    post:
+      consumes:
+      - application/json
+      description: handler that is responsible for creating product images.
+      parameters:
+      - description: Create Product Image Body
+        in: body
+        name: Request
+        required: true
+        schema:
+          $ref: '#/definitions/github_com_iarsham_shop-api_internal_dto.MediaRequest'
+      - description: Product Slug
+        in: path
+        name: pk
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Success
+          schema:
+            $ref: '#/definitions/responses.CreateProductImagesResponse'
+        "409":
+          description: Warn
+          schema:
+            $ref: '#/definitions/responses.ProductNOTExistsResponse'
+        "500":
+          description: Error
+          schema:
+            $ref: '#/definitions/responses.InterServerErrorResponse'
+      summary: Create Image for products
+      tags:
+      - Product Images
   /product/create:
     post:
       consumes:
@@ -553,6 +639,11 @@ paths:
         required: true
         schema:
           $ref: '#/definitions/github_com_iarsham_shop-api_internal_dto.ProductRequest'
+      - description: Category Slug
+        in: path
+        name: pk
+        required: true
+        type: string
       produces:
       - application/json
       responses:
@@ -560,6 +651,10 @@ paths:
           description: Success
           schema:
             $ref: '#/definitions/responses.ProductResponse'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/responses.CategoryNotFoundResponse'
         "409":
           description: Warn
           schema:
@@ -619,7 +714,7 @@ paths:
       summary: Get All Products
       tags:
       - Product
-  /product/update:
+  /product/update/{pk}:
     put:
       consumes:
       - application/json
