# pkg/responses/product_images.go
@@ -1,0 +1,5 @@
+package responses
+
+type CreateProductImagesResponse struct {
+	Response string `example:"Created Successfully"`
+}
